--- a/config/install/views.view.blog.yml
+++ b/config/install/views.view.blog.yml
@@ -235,6 +235,8 @@ display:
           plugin_id: numeric
       display_extenders: {  }
       css_class: ''
+      link_url: ''
+      link_display: global
     cache_metadata:
       max-age: -1
       contexts:
@@ -389,6 +391,36 @@ display:
         - 'languages:language_interface'
         - url
         - url.query_args
+        - 'user.node_grants:view'
+        - user.permissions
+      tags: {  }
+  feed:
+    display_plugin: feed
+    id: feed
+    display_title: Feed
+    position: 6
+    display_options:
+      display_extenders: {  }
+      row:
+        type: node_rss
+        options: {  }
+      displays:
+        global: global
+        default: '0'
+        blog_listing: '0'
+        blog_term: '0'
+        term: '0'
+      arguments: {  }
+      defaults:
+        arguments: false
+        header: false
+      path: blog/rss.xml
+      header: {  }
+    cache_metadata:
+      max-age: -1
+      contexts:
+        - 'languages:language_content'
+        - 'languages:language_interface'
         - 'user.node_grants:view'
         - user.permissions
       tags: {  }
